# cc-local-router

./: README.md  package.json  pyproject.toml
cc_local_router/: __init__.py  availability.py  model_alias.py
proxy/: index.ts
tests/: test_model_alias.py
