[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-local-router"
version = "0.1.0"
description = "Model-alias and availability-gate patches for cc-patcher, backing a local-inference model-splitter proxy in front of Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["cc-patcher"]

[project.entry-points."cc_patcher.patches"]
model-alias = "cc_local_router:PATCHES"

[tool.hatch.build.targets.wheel]
packages = ["cc_local_router"]
